# project_pythia

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_imports.py
.github/workflows/: deploy.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/core/: GlitchCard.tsx
frontend/src/components/ui/: CardReveal.tsx  Cursor.tsx  Ouroboros.tsx  TerminalButton.tsx
frontend/src/hooks/: useDecrypt.ts
frontend/src/scenes/: FeedbackScene.tsx  GreetingScene.tsx  InputScene.tsx  LoadingScene.tsx  ProtocolScene.tsx  ResultScene.tsx  RulesScene.tsx  TokensScene.tsx  WarningScene.tsx
frontend/src/screens/: BootScreen.tsx  HomeScreen.tsx
frontend/src/state/: appReducer.ts
frontend/src/utils/: sound.ts
migrations/: env.py
migrations/versions/: 0de3557fe29f_change_interpretation_to_json.py  348ec70bdf73_add_readings_table.py  9fa864160fd9_rename_candles_to_tokens_and_remove_.py  e2330d7d3bd9_initial_migration.py
project_pythia/app/: main.py
project_pythia/app/api/: oracle.py  users.py
project_pythia/app/assets/: tarot_cards.json
project_pythia/app/core/: config.py  db.py  limiter.py  logging_config.py  security.py
project_pythia/app/models/: base.py  readings.py  user.py
project_pythia/app/schemas/: pythia.py  tarot.py  user.py
project_pythia/app/services/: llm_client.py  tarot_service.py  telegram_service.py  whisper_service.py
