[project]
name = "project_pythia"
version = "0.1.0"
description = "AI Tarot Bot with FastAPI and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "google-genai>=0.3.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["project_pythia*"]
exclude = ["migrations*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"